[package]
name = "unwind-systest"
version = "0.1.1"
authors = ["Steven Fackler <sfackler@palantir.com>"]

[features]
ptrace = ["unwind-sys/ptrace"]

[dependencies]
unwind-sys = { path = "../unwind-sys" }
libc = "0.2"

[build-dependencies]
#ctest2 = "^0.3.1"
ctest2 = { "git" = "https://github.com/GreenBeard/ctest2" }
